[project]
name = "agentpy"
version = "0.1.0"
description = "A modular AI agent framework for LLM interactions with tool calling support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
agentpy = "agentpy.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentpy"]
